# gp2025-Assignments

./: .gitignore  CMakeLists.txt  README.md
assignment1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
assignment1/src/: main.cpp
assignment2/: CMakeLists.txt  README.md
assignment2/src/: main.cpp
assignment3/: .gitignore  CMakeLists.txt  README.md
assignment3/data/: cheburashka_noisy.off  eight_noisy.off
assignment3/src/: main.cpp
assignment4/: CMakeLists.txt  README.md
assignment4/src/: main.cpp
assignment5/: CMakeLists.txt  README.md
assignment5/src/: Colors.cpp  Deformation.cpp  Deformation.h  Lasso.cpp  Lasso.h  main.cpp
assignment6/: CMakeLists.txt  README.md  blender_export_anim.py
assignment6/data/big_vegas/: handles.dmat  pose.dmat  rest.skel  rootpos.dmat
assignment6/data/context-aware/: eg0.dmat  eg1.dmat  eg2.dmat  eg3.dmat  handles.dmat  pose.dmat  rest.skel  rootpos.dmat
assignment6/data/cylinder/: handles.dmat  pose.dmat  rest.skel
assignment6/data/doozy/: handles.dmat  pose.dmat  rest.skel  rootpos.dmat
assignment6/data/hand/: handles.dmat  pose.dmat  rest.skel  rootpos.dmat
assignment6/data/mousey/: handles.dmat  pose.dmat  rest.skel  rootpos.dmat
assignment6/data/sphere/: handles.dmat  pose.dmat  rest.skel  rootpos.dmat
assignment6/src/: main_starter.cpp  utils.cpp  utils.h
libigl_tutorials/: .gitignore  CMakeLists.txt
viewer_proxy/: CMakeLists.txt  viewer_proxy.cpp  viewer_proxy.h
